[FIX] viin_brand_mail: wrong color for o_PersonaImStatusIcon_icon online

--- a/viin_brand_mail/static/src/components/partner_im_status_icon/partner_im_status_icon.scss
+++ b/viin_brand_mail/static/src/components/partner_im_status_icon/partner_im_status_icon.scss
@@ -2,6 +2,10 @@
 	&.o-offline {
         color: $gray-500 !important;
     }
+
+   	&.text-primary {
+        color: $brand-primary !important; 
+    }
 }
 .o_PartnerImStatusIcon_icon {
     &.o-bot {
